--- a/Library-System-Web/Views/Checkouts/Index.cshtml
+++ b/Library-System-Web/Views/Checkouts/Index.cshtml
@@ -1,5 +1,17 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model Library_System_Web.ViewModels.Checkouts.Index
+
+<h2>
+    Checkout
+</h2>
+
+<form asp-action="Add" >
+    @Html.LabelFor(x => x.Book.Isbn)
+    @Html.TextBoxFor(x => x.Book.Isbn, new { @class="123" })
+    @Html.LabelFor(x => x.Checkout.LoanDate)
+    @Html.TextBoxFor(x => x.Checkout.LoanDate)
+    @Html.LabelFor(x => x.Checkout.DueDate)
+    @Html.TextBoxFor(x => x.Checkout.DueDate)
+
+
+    <button class="btn btn-secondary">Checkout</button>
+</form>
