--- a/Library-System-Web/Views/Books/Details.cshtml
+++ b/Library-System-Web/Views/Books/Details.cshtml
@@ -14,4 +14,5 @@
         }
         <p>@Model.Book.Summary</p>
     }
+    <a class="btn btn-secondary" href="~/Checkouts?ISBN=@Model.ISBN">Checkout</a>
 </div>
